fix: correct overflow issue with mobile view

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 body{
     display: grid;
     font-family: sans-serif;
+    overflow-x: hidden; 
 }
 
 #sidebar img{
